<resources>
    <string name="prompt_confirma_password_acess">Confirmar Senha de Acesso</string>
    <string name="prompt_numero_celular">Número Celular</string>
    <string name="prompt_numero_passaporte">Número do Passaporte</string>
    <string name="prompt_numero_naacionalidade">Nacionalidade</string>
    <string name="prompt_numero_naturalidade">Naturalidade</string>
    <string name="prompt_numero_comercial">Número Comercial</string>
    <string name="prompt_numero_residencial">Número Residencial</string>
    <string name="prompt_chave_aceso">Chave de acesso</string>
    <string name="prompt_password_acess">Senha para o Login de Acesso</string>
    <string name="prompt_repita_password">Repita a senha</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_estado_civil">Estado Civil</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirma_password">Confirmar Senha</string>
    <string name="prompt_numero_cartao_destino">Número do cartão de destino</string>
    <string name="prompt_favorecido">Nome do Favorecido</string>
    <string name="prompt_banco_favorecido">Banco do Favorecido</string>
    <string name="prompt_agencia_sem_dv">Agência (Sem DV)</string>
    <string name="prompt_conta_com_dv">Conta (Com DV)</string>
    <string name="prompt_valor">Valor</string>
    <string name="prompt_valor_carga">Valor da Carga</string>
    <string name="prompt_tarifa_carga">Tarifa da Carga</string>
    <string name="prompt_vencimento">Vencimento</string>
    <string name="prompt_linha_digitavel">Linha Digitável</string>
    <string name="prompt_tarifa">Tarifa</string>
    <string name="prompt_senha_cartao">Senha do Cartão</string>
    <string name="prompt_novo_cartao_virtual">Nome do Novo Cartão Virtual</string>
    <string name="prompt_novo_cartao_1m">1 Mês</string>
    <string name="prompt_novo_cartao_2m">2 Meses</string>
    <string name="prompt_novo_cartao_3m">3 Meses</string>
    <string name="prompt_avisos_e_notificacoes">Avisos e Notificações</string>
    <string name="prompt_bloqueio_cartao">Bloqueio do Cartão</string>
    <string name="prompt_uso_exterior">Uso no Exterior</string>
    <string name="prompt_uso_internet">Uso na Internet</string>
    <string name="prompt_saque">Saque</string>
    <string name="prompt_limpar_carrinho">Deseja limpar a lista completamente?</string>
    <string name="prompt_excluir_produto_carrinho">Deseja realmente retirar este produto do carrinho?</string>
    <string name="prompt_confirma_notificar_perda">Deseja realmente informar a perda deste cartão.
                                                    \nEste cartão será cancelado e um novo cartão será emitido.</string>
    <string name="prompt_confirma_notificar_roubo">Deseja realmente informar o roubo deste cartão.
                                                    \nEste cartão será cancelado e um novo cartão será emitido.</string>
    <string name="label_sem_produtos_carrinho">Você não adicionou nenhum produto ao carrinho.</string>
    <string name="label_endereco_entrega">Entregar no endereço</string>
    <string name="label_pagamento">Pagamento</string>
    <string name="label_valor_total">Valor Total</string>
    <string name="label_para">Para</string>
    <string name="label_cartao">Cartão</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="label_mais">+</string>
    <string name="label_menos">-</string>
    <string name="label_entrega_endereco_vendedor">Retirar no Endereço do Vendedor</string>
    <string name="label_entrega_meu_endereco">Entregar no meu Endereço</string>
    <string name="titulo_loja">Loja</string>
    <string name="titulo_meus_pedidos">Pedidos</string>
    <string name="titulo_carrinho">Carrinho</string>
    <string name="acao_recuperar_login">Recuperar Senha</string>
    <string name="acao_criar_login">Criar Login</string>
    <string name="acao_transferir">Transferir</string>
    <string name="acao_gerar_boleto">Gerar Boleto</string>
    <string name="acao_enviar_email">Enviar Email</string>
    <string name="acao_enviar_boleto_email">Enviar boleto para Email</string>
    <string name="acao_requisitar_cartao_virtual">Requisitar um Cartão Virtual</string>
    <string name="acao_requisitar_cartao_virtual_novo">Requisitar Cartão Virtual</string>
    <string name="acao_concordo">Concordo</string>
    <string name="acao_trocar_senha_cartao">Trocar Senha do Cartão</string>
    <string name="acao_comunicar_perda_roubo">Comunicar Perda ou Roubo</string>
    <string name="acao_adicionar_carrinho">Adicionar ao Carrinho</string>
    <string name="acao_continuar">Continuar</string>
    <string name="acao_finalizar_compra">Finalizar Compra</string>
    <string name="acao_limpar_lista">Limpar a lista</string>
    <string name="acao_pagar">Pagar</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_trocar_email">Trocar Email</string>
    <string name="action_trocar_senha">Trocar Senha</string>
    <string name="error_invalid_email">Este endereço de email é inválido.</string>
    <string name="error_data_nascimento_invalida">Data de nascimento inválida.</string>
    <string name="error_data_invalida">Data inválida.</string>
    <string name="error_invalid_cpf">Este cpf é inválido</string>
    <string name="error_invalid_rg">Este RG é inválido</string>
    <string name="error_invalid_password">Digite a senha</string>
    <string name="error_incorrect_password_input">A senha deve possuir números e letras e ter entre 6 e 30 caracteres.</string>
    <string name="error_incorrect_password_credencial_input">A senha deve possuir entre 4 e 30 caracteres.</string>
    <string name="error_incorrect_password">A senha é incorreta</string>
    <string name="error_senhas_incompativeis">As senhas não coincidem.</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_invalid_card_number">Número de cartão inválido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_cnpj">CNPJ</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_cep">CEP</string>
    <string name="prompt_novo_email">Email Desejável</string>
    <string name="prompt_numero_cartao">Número do Cartão</string>
    <string name="prompt_data_nascimento">Data de Nascimento</string>
    <string name="prompt_confirmar_senha">Confirmar Senha</string>
    <string name="title_activity_cadastro_login">Cadastro de Login de Acesso</string>
    <string name="title_activity_termos_de_uso">Termos de Uso</string>
    <string name="str_icone_alterar_senha">Senha do Cartão</string>
    <string name="str_icone_transferir">Transferir</string>
    <string name="str_icone_inserir_carga">Inserir Carga</string>
    <string name="str_icone_cartoes_virtuais">Cartões Virtuais</string>
    <string name="str_icone_ajustes_seguranca">Ajustes de Segurança</string>
    <string name="str_icone_tarifas">Tarifas</string>
    <string name="str_icone_logout">Logout</string>
    <string name="str_icone_limites">Limites</string>
    <string name="texto_icone">Logout</string>
    <string name="info_concordo">
        Apertando \"Concordo\" eu concordo com os Termos de Uso do Cartão Virtual
    </string>
    <string name="prompt_autorizar_compra">Deseja autorizar esta compra no valor de %1$s em %2$sx?</string>
    <string name="mensagem_sem_internet">Aconteceu uma falha na comunicação. Verifique sua rede.</string>
    <string name="mensagem_confirmacao_transf">Confirma esta transferência?</string>
    <string name="mensagem_sessao_expirou">A sessão expirou.</string>
    <string name="mensagem_confirma_alteracao_bloqueio">Confirma a alteração do estado do bloqueio?</string>
    <string name="mensagem_timeout">A rede está lenta. Verifique sua conexão.</string>
    <string name="mensagem_not_conection">Você esta sem conexão a Internet.</string>
    <string name="mensagem_sem_movimentacao">Sem movimentos neste Período.</string>
    <string name="action_settings_trocar_email_portador">Trocar Email do Portador</string>
    <string name="action_settings_trocar_senha_login">Trocar Senha do Login</string>
    <string name="action_settings_logout">Sair</string>
    <string name="title_activity_meus_cartoes">Meus Cartões</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_trocar_email">TrocarEmailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_trocar_senha">TrocarSenhaActivity</string>
    <string name="title_activity_cartao">Cartão</string>
    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>
    <string name="title_activity_ajustes_de_seguranca_cartao">Ajustes de Segurança</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_market_place">Loja</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_teste_deletar">testeActivityDeletar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
</resources>