<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_transferir_outro_cartao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itspay.br.com.activity.TransferirOutroCartaoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="13"

            android:layout_alignParentLeft="true">

            <EditText
                android:id="@+id/numeroCartaoDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_numero_cartao_destino"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingLeft="15dp" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/favorecido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_favorecido"
                android:imeActionLabel="@string/prompt_favorecido"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="text"
                android:editable="false"
                android:maxLines="1"
                android:padding="15dp"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_valor"
                android:imeActionLabel="@string/prompt_valor"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="15dp"/>
            <EditText
                android:id="@+id/tarifa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_tarifa"
                android:imeActionLabel="@string/prompt_valor"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="15dp"/>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/senhaCartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_senha_cartao"
                android:imeActionLabel="@string/prompt_senha_cartao"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/transferir_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button_itspay"
            android:text="@string/acao_transferir"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</RelativeLayout>
