<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_cartao_virtual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itspay.br.com.activity.NovoCartaoVirtualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/nomeCartaoVirtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_novo_cartao_virtual"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:text="@string/prompt_novo_cartao_1m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:id="@+id/button1M"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/prompt_novo_cartao_2m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="2"
                android:id="@+id/button2M"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/prompt_novo_cartao_3m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="3"
                android:id="@+id/button3M"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>

        <Button
            android:id="@+id/requisitar_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button_itspay"
            android:text="@string/acao_requisitar_cartao_virtual_novo"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
    </LinearLayout>


</RelativeLayout>
