<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_recuperar_senha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itspay.br.com.activity.RecuperarSenhaActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="13"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_cpf"
            android:inputType="number"
            android:maxLines="1"
            android:padding="15dp"/>
        <!--android:text="041.289.461-09" />-->

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="10"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/dataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_data_nascimento"
            android:inputType="date"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            android:padding="15dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonCriarLogin"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button_itspay"
        android:text="@string/acao_recuperar_login"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

</LinearLayout>
