<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_carga_inserida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itspay.br.com.activity.CargaInseridaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/valorCarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/prompt_valor_carga"
                    android:inputType="number"
                    android:enabled="false"
                    android:maxLines="1"
                    android:padding="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/vencimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/prompt_cpf"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="15dp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/linhaDigitavel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/prompt_linha_digitavel"
                android:singleLine="false"
                android:textIsSelectable="true"
                android:editable="false"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:padding="15dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/enviar_email"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_button_itspay"
            android:text="@string/acao_enviar_boleto_email"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
